[package]
edition = "2021"
name    = "hello-async"
version = "0.1.0"

[[bin]]
name = "hello-async"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32c3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
sht4x = { git = "https://github.com/sirhcel/sht4x.git", rev = "40cef0dabc5c5fed0a2ada2e8f5caa75d4e51075", features = ["defmt", "embedded-hal-async"]}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
