[package]
edition = "2021"
name    = "hello"
version = "0.1.0"

[[bin]]
name = "hello"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt            = "0.3.10"
esp-hal          = { version = "1.0.0-beta.0", features = ["defmt", "esp32c3"] }
esp-println      = { version = "0.13.0", features = ["defmt-espflash", "esp32c3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
